Closed
Bug 267663
Opened 21 years ago
Closed 10 years ago
Strange behaviour of "read" check for group header
Categories
(Thunderbird :: Mail Window Front End, defect)
Thunderbird
Mail Window Front End
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 43.0
People
(Reporter: maa_public, Assigned: alta88)
References
Details
Attachments
(1 file)
|
1.10 KB,
patch
|
rkent
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1) Opera 7.53 [en]
Build Identifier: Mozilla Thunderbird 0.9 (20041103)
Clicking on "Read" checkbox in mail selection window (when one is in some
"grouped" mode, say, "grouped by date") for the group itself does not set "read"
mark for the group, but changes the number of read/unread messages in a folder
(hence has some effect, which is not reflected by the interface).
Probably clicking other checkboxes is affected as well: not sure what does
clicking on "junk" checkbox for the whole group does, hope it does not invisibly
mark all messages as spam.
Reproducible: Always
Steps to Reproduce:
1. Switch to Inbox, mark all messages read.
2. Do "sort by date", then "grouped by sort".
3. Click on the checkbox in "sort by read" column and "today" row.
Actual Results:
No mark appeared on the clicked place, but the count of unread emails in inbox
folder is now 1.
Expected Results:
There are two options.
1. Such checkbox affect the group itself. Hence, we could mark, say, a "today"
group as unread or flagged, while the emails in this group are not marked.
Has little sense, and can be unobvious to store (since these groups can be
enabled and disabled, it will be required to save the unread/flagged state of a
group even when the mail list is ungrouped).
2. More sensible behaviour is if a checkbox for a group (flag, junk, unread etc)
just reflects the contents of checkboxes of all emails in this group.
Hence (example flag will be "read"):
2.1 If no mail is unread inside the group, the group's "read" box is unmarked,
2.2 If at least one mail is unread inside the group, the group's "read" box is
marked with a 50% opaque mark.
2.3 If all mails are unread inside the group, the group's "read" box is marked.
Vice versa:
2.4 If user clicks the "read"("flag"/"junk") box for the group setting it, all
emails in the group are marked as unread(flagged/junk),
2.5 If user clicks the "read"("flag"/"junk") box for the group resetting it,
all emails in the group are marked as read(non-flagged/non-junk).
Comment 1•21 years ago
|
||
Reproduced with TB 1.0, Win2K
See also bug 267673
Severity: normal → minor
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Strange behaviour of "read" checkbox for grouped modes for groups → Strange behaviour of "read" check for group header
Updated•19 years ago
|
QA Contact: front-end
Updated•18 years ago
|
Assignee: mscott → nobody
The cycler icons were displayed in error (css being fixed in Bug 368920) and partially seemed to work, but were never specifically implemented to handle grouped header dummy row implied multiselection. Make sure clicking there doesn't do anything.
Assignee: nobody → alta88
Attachment #8654208 -
Flags: review?(rkent)
Comment 4•11 years ago
|
||
Comment on attachment 8654208 [details] [diff] [review]
groupedCylcers.patch
Review of attachment 8654208 [details] [diff] [review]:
-----------------------------------------------------------------
Yes I suppose since it only partially works, it is better to remove it than leave the confusing current implementation.
Attachment #8654208 -
Flags: review?(rkent) → review+
Keywords: checkin-needed
Comment 5•10 years ago
|
||
https://hg.mozilla.org/comm-central/rev/c55cd64ab464640e9585e0c80fd136c990dd7b2d
Bug 267663 - Strange behaviour of "read" check for group header. r=rkent a=aleth
Updated•10 years ago
|
Status: NEW → RESOLVED
Closed: 10 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 43.0
You need to log in
before you can comment on or make changes to this bug.
Description
•