Bug 267663 - Strange behaviour of "read" check for group header. r=rkent a=aleth

--HG--
extra : amend_source : ca148f5ea3454f5dee82ccb818773ecf2f3b3742